fix modal on mobile

--- a/resources/scss/modal.scss
+++ b/resources/scss/modal.scss
@@ -105,6 +105,10 @@
     @apply flex;
   }
 
+  .twint-scan {
+    @apply hidden;
+  }
+
   @media (orientation: landscape) {
     @apply justify-center;
 
